Fixed stack overflow issue with properties. Added media folder for images and audio. Changed names of certain values. Simplified code and cleaned up some things.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,13 +1,15 @@
 
 /*Canvas Style */
-#CanvasDiv{
-    text-align: center;
-}
 #canvas{
-    background-color: red;
+    background-color: lightgray;
+    width: 1200px;
+    height: 800px;
+    margin-left: auto; margin-right: auto;
+    padding-left: 0; padding-right: 0;
+    display: block;
 }
 
 /* HEADER */
-#header{
+header{
     text-align: center;
 }
